# filonov

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  docker-compose.yaml  end-to-end-tests.sh  env.template  generate_protos.sh  index.html  install-dev.sh  mkdocs.yml  requirements.txt  sitemap.xml
.github/workflows/: publish-filonov.yaml  publish-media-fetching.yaml  publish-media-similarity.yaml  publish-media-tagging.yaml  publish-mkdocs.yml  push-filonov-to-github-packages.yaml  push-media-fetching-to-github-packages.yaml  push-media-similarity-to-github-packages.yaml  push-media-tagging-to-github-packages.yaml  test-filonov.yaml  test-media-fetching.yaml  test-media-similarity.yaml  test-media-tagging-garf.yaml  test-media-tagging-langchain.yaml  test-media-tagging.yaml
docs/: index.md
docs/fetching/: bid-manager.md  bq.md  enriching.md  file.md  googleads.md  index.md  loaders.md  overview.md  sql.md  youtube.md
docs/get-started/: cli.md  customization.md  installation.md  quickstart.md
docs/similarity/: adaptive-threshold.md  algorithms.md  clustering.md  comparison.md  idf-context.md  media-pair.md  overview.md  (+2 more)
libs/creative_maps/: README.md  pyproject.toml  tox.ini
libs/creative_maps/creative_maps/: creative_map.py
libs/creative_maps/creative_maps/entrypoints/: cli.py  utils.py
libs/creative_maps/creative_maps/inputs/: google_ads.py  interfaces.py  queries.py  youtube.py
libs/creative_maps/scripts/: test-cli.sh
protos/: filonov.proto  tagging.proto
search/: search_index.json
tagging/: index.html
(+283 files in other folders)
